--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -152,9 +152,9 @@
                         </a>
                     </li>
                     <li>
-                        <a class="cd-nav-item item-4" href="#">
-                            <h3>Service #4</h3>
-                            <p>This is the item description</p>
+                        <a class="cd-nav-item item-4" href='@Url.Action("SearchWagon", "Home", new { Area = "Directory" })'>
+                            <h3>@DirectoryResource.search_wagon_title</h3>
+                            <p>@DirectoryResource.search_wagon_description</p>
                         </a>
                     </li>
                     <li>
