--- a/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
@@ -37,9 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href='@Url.Action("Index", "Home", new { area = "IDSMORS" })'>ИДС"УСПС"</a>
                         </li>
-                        @*<li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link" href='@Url.Action("Index", "Home", new { Area = "Directory" })' target="_blank">Утилиты</a>
+                        </li>
                     </ul>
                 </div>
             </div>
