--- a/WEB_UI/Content/view/idsrwt/outgoing.css
+++ b/WEB_UI/Content/view/idsrwt/outgoing.css
@@ -173,3 +173,31 @@ cars detali panel
 div#card-not-arrived-cars, div#card-epd-cars, div#card-car-info, div#card-arrived-cars {
     height: 100%;
 }
+
+/**/
+legend {
+    display: block;
+    width: auto;
+    padding: 0 5px;
+    margin-bottom: 0;
+    font-size: inherit;
+    line-height: inherit;
+    border-bottom: none;
+    text-transform: uppercase;
+}
+
+fieldset {
+    border: 2px groove threedface;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+    fieldset > fieldset {
+        border: 1px groove threedface;
+        padding: 5px;
+        border-radius: 3px;
+    }
+
+        fieldset > fieldset legend {
+            text-transform: none;
+        }
