--- a/WEB_UI/Content/view/directory/home.css
+++ b/WEB_UI/Content/view/directory/home.css
@@ -88,3 +88,31 @@ td.details-control {
 tr.shown td.details-control {
     background: url('../../../Content/DataTables/media/images1/details_close.png') no-repeat center center;
 }
+
+/**/
+legend {
+    display: block;
+    width: auto;
+    padding: 0 5px;
+    margin-bottom: 0;
+    font-size: inherit;
+    line-height: inherit;
+    border-bottom: none;
+    text-transform: uppercase;
+}
+
+fieldset {
+    border: 2px groove threedface;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+    fieldset > fieldset {
+        border: 1px groove threedface;
+        padding: 5px;
+        border-radius: 3px;
+    }
+
+        fieldset > fieldset legend {
+            text-transform: none;
+        }
