fix bag 2-event

--- a/WEB_UI/Areas/Directory/Views/Home/WagonMarking.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/WagonMarking.cshtml
@@ -52,9 +52,19 @@
                     </div>
                 </div>
                 <div class="card-body text-dark pl-3 pr-3" style="font-size:1.3rem">
-                    <table class="display compact table-bordered" id="table-wagon" style="width:100%; table-layout: fixed"></table>
+                    <div class="card">
+                        <div class="card-header" id="sostav_info">
+                            
+                            @*<label id="sostav_info"></label>*@
+                        </div>
+                        <div class="card-body">
+                            <blockquote class="blockquote mb-0">
+                                <table class="display compact table-bordered" id="table-wagon" style="width:100%; table-layout: fixed"></table>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-footer bg-transparent border-dark">Footer</div>
+                <div class="card-footer bg-transparent border-dark">&copy; @DateTime.Now.Year ДАТП & ТД</div>
             </div>
         </div>
     </div>
