--- a/WEB_UI/Areas/Directory/Views/Home/WagonMarking.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/WagonMarking.cshtml
@@ -70,5 +70,21 @@
     </div>
 </div>
 
+<div id="change_group_condition" title="" style="display:none">
+    <div class="alert" id="change_group_condition_alert"></div>
+    <form id="form_change_group_condition">
+        <div class="form-group row" style="margin-bottom:0.5rem">
+            <label for="change_group_condition_arrival" class="col-sm-5 col-form-label">@IDSRWTResource.title_wagons_condition:</label>
+            <div class="col-sm-7">
+                <select class="form-control" id="change_group_condition_arrival" name="change_group_condition_arrival"></select>
+                <div class="invalid-feedback">
+                </div>
+            </div>
+        </div>
+        <!-- Allow form submission with keyboard without duplicating the dialog button -->
+        <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+    </form>
+</div>
+
 
 
