--- a/WEB_UI/Areas/IDSRWT/Views/Home/Index.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Index.cshtml
@@ -47,12 +47,11 @@
             </a>
         </li>
         <li>
-            @*<a href='@Url.Action("Internal", "Home", new { area = "IDSRWT" })'>*@
-            <a href='#'>
+            <a href='@Url.Action("WSD", "Home", new { area = "IDSRWT" })'>
                 <span class="ca-icon">J</span>
                 <div class="ca-content">
-                    <h2 class="ca-main">@IDSRWTResource.internal_title</h2>
-                    <h3 class="ca-sub">@IDSRWTResource.internal_description</h3>
+                    <h2 class="ca-main">@IDSRWTResource.wsd_title</h2>
+                    <h3 class="ca-sub">@IDSRWTResource.wsd_description</h3>
                 </div>
             </a>
         </li>
