--- a/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
@@ -54,7 +54,7 @@
     @*</div>*@
 
     <div class="jumbotron text-center" style="margin-bottom:0">
-        <p>Footer</p>
+        <p>&copy; @DateTime.Now.Year ДАТП & ТД</p>
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jquery-cookie")
