--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -102,8 +102,17 @@
                         <div class="col-xl-4">
                             <div class="card border-primary">
                                 <div class="card-header">Дерево путей</div>
-                                <div class="card-body text-primary">
-
+                                <div class="card-body">
+                                    <table id="tree-way" class="compact" style="width:100%">
+                                        <thead>
+                                            <tr>
+                                                <th colspan="4">Дерево путей</th>
+                                                <th>Оператор</th>
+                                                <th>Кол</th>
+                                                <th>Макс</th>
+                                            </tr>
+                                        </thead>
+                                    </table>
                                 </div>
                             </div>
                         </div>
